# blip

./: .gitignore  Cargo.toml  README.md  opencode.json
.cargo/: config.toml
.github/actions/setup-apple-signing/: action.yml
.github/workflows/: build-macos.yml  release-macos.yml
apps/blip-capture/: Cargo.toml  Info.plist  README.md  build-app.sh
apps/blip-capture/src/: main.rs  recording.rs  theme.rs
apps/blip-cli/: Cargo.toml
apps/blip-cli/src/: cli.rs  commands.rs  main.rs  recording.rs
apps/blip-studio/: Cargo.toml  Info.plist  README.md  build-app.sh  build.rs  run-app.sh
apps/blip-studio/scenes/: camera-headless.json  camera-preview-headless.json
apps/blip-studio/shaders/: compositor.wgsl
apps/blip-studio/src/: assets.rs  compositor.rs  headless.rs  main.rs  numeric_input.rs  rtmp.rs  theme.rs  viewer.rs
crates/blip-avfoundation/: Cargo.toml
crates/blip-avfoundation/src/: camera.rs  lib.rs
crates/blip-sck/: Cargo.toml
crates/blip-sck/src/: capture.rs  config.rs  content.rs  filter.rs  lib.rs  permission.rs  platform.rs  target.rs  video_frame.rs
gpui/: README.md
gpui/gpui/: Cargo.toml
gpui/gpui_linux/: Cargo.toml
gpui/gpui_macos/: Cargo.toml
gpui/gpui_macros/: Cargo.toml
gpui/gpui_platform/: Cargo.toml
gpui/gpui_shared_string/: Cargo.toml
gpui/gpui_tokio/: Cargo.toml
gpui/gpui_util/: Cargo.toml
gpui/gpui_web/: Cargo.toml
gpui/gpui_wgpu/: Cargo.toml
gpui/gpui_windows/: Cargo.toml
